# substrate_rsrl

./: .gitmodules  README.md
node-template/: Cargo.toml  README.md
node-template/node/: Cargo.toml
node-template/node/src/: chain_spec.rs  command.rs  main.rs  pow.rs  service.rs
node-template/pallets/template/: Cargo.toml
node-template/primitives/: Cargo.toml
node-template/primitives/src/: lib.rs
node-template/runtime/: Cargo.toml
node-template/runtime/src/: difficulty.rs  lib.rs  policy.rs
node-template/sc-pow/: Cargo.toml
node-template/sc-pow/src/: lib.rs
node-template/sp-pow/: Cargo.toml
node-template/sp-pow/src/: lib.rs
node-template/src/: service.rs
